# usestruct

./: BUILD.bazel  README.md  go.mod  go.sum  usestruct.go
pkg/analyzer/: BUILD.bazel  analyzer.go  analyzer_test.go  args_test.go  call_expr_test.go  filter_chains_test.go  format_test.go  func_decl_test.go  mocker.go  mocker_test.go  recurse_check_deep_test.go  set.go  set_test.go
pkg/analyzer/testdata/src/testcase/: test.go
pkg/analyzer/testdata/src/testcase2/: test.go
