load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "analyzer",
    srcs = ["analyzer.go"],
    importpath = "gitlab.hyperus.team/hyp-platform/hyperus/numbat/scripts/usestruct/pkg/analyzer",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_x_tools//go/analysis",
        "@org_golang_x_tools//go/analysis/passes/inspect",
        "@org_golang_x_tools//go/ast/inspector",
    ],
)
